--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,20 @@
 <div style="padding: 13px;">
     <mat-spinner *ngIf="products.length == 0"></mat-spinner>
 
-    <mat-card *ngFor="let product of products" style="margin-top:10px;">
+    <mat-card *ngFor="let product of products" style="margin-top:10px; background-color: aliceblue;">
         <mat-card-header>
             <mat-card-title>
                 {{product.name}}
             </mat-card-title>
             <mat-card-subtitle>
-               Rs {{product.price}} / {{product.quantity}}
+               Rs {{product.price}}  Available: {{product.quantity}}
             </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
             <p>
                 {{product.description}}
             </p>
-            <img style="height:100%; width:100%;" src="{{ product.imageUrl }}"/>
+            <img style="height:50%; width:50%;" src="{{ product.imageUrl }}"/>
         </mat-card-content>
         <mat-card-actions>
             <button mat-button> Buy Product</button>
